# django-timezone-field

./: .coveragerc  .flake8  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README  README.md  README.rst  manage.py  pyproject.toml  release_notes.rst  run_tests.py  runtests.py  settings.py  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: index.rst
tests/: conftest.py  models.py  settings.py  test_add_gmt_offset_to_choices.py  test_backends.py  test_choices.py  test_choices_display_option.py  test_compat.py  test_deconstruct.py  test_field.py  test_form_field.py  test_middleware.py  test_model_form_field.py  test_serializer_field.py  test_utils.py  tests.py
timezone_field/: __init__.py  choices.py  compat.py  fields.py  forms.py  middleware.py  rest_framework.py  test_settings.py  tests.py  utils.py  validators.py
timezone_field/backends/: __init__.py  zoneinfo.py
timezone_field/rest_framework/: fields.py
timezone_field/tests/: models.py  settings.py  tests.py
timezones/: __init__.py  db.py  decorators.py  fields.py  forms.py  tests.py  utils.py  zones.py
timezones/templatetags/: __init__.py  timezone_filters.py
timezones/timezones_tests/: tests.py
