[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.coverage.run]
relative_files = true

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry]
name = "django-timezone-field"
version = "5.0"
description = "A Django app providing database and form fields for pytz timezone objects."
authors = ["Mike Fogel <mike@fogel.ca>"]
packages = [
    { include = "timezone_field" },
]

[tool.poetry.dependencies]
python = "^3.7"
pytz = "*"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.2"}
Django = [
    { version = "^2.2 || ^3.2", python = "~3.7" },
    { version = "^2.2 || ^3.2 || ^4.0", python = "^3.8" },
]
djangorestframework = "^3.13.1"
flake8 = "^4.0.1"
psycopg2-binary = "^2.9.3"
pytest = "^6.2.5"
pytest-django = "^4.5.2"
pytest-pythonpath = "^0.7.3"
pytest-lazy-fixture = "^0.6.3"
pytest-cov = "^3.0.0"
black = "^21.12b0"
isort = "^5.10.1"
pylint = "^2.12.2"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "C, R, redefined-outer-name"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
